--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </li>
 
                 <li class="nouveautes__item">
-                    <strong>🎉 Nouveaux languages : <a href="language/Python/index.html"
+                    <strong>🎉 Nouveau language : <a href="language/Python/index.html"
                             class="nouveautes__lien">Python</a></strong><br>
                     <strong>Nouveaux chapitres de <a href="language/Python/index.html"
                             class="nouveautes__lien">Python</a></strong> :
@@ -49,6 +49,19 @@
                         <li class="nouveautes__sous-item">
                             Chapitre 1 : <a href="language/Python/chapitres/installation.html"
                                 class="nouveautes__lien">Installation</a>
+                        </li>
+
+                    </ul>
+                </li>
+                <li class="nouveautes__item">
+                    <strong>🎉 Nouveau framework : <a href="framework/React/index.html"
+                            class="nouveautes__lien">React</a></strong><br>
+                    <strong>Nouveaux chapitres de <a href="framework/React/index.html"
+                            class="nouveautes__lien">React</a></strong> :
+                    <ul class="nouveautes__sous-liste">
+                        <li class="nouveautes__sous-item">
+                            Chapitre 1 : <a href="framework/React/chapitres/introduction.html"
+                                class="nouveautes__lien">Introduction</a>
                         </li>
 
                     </ul>
@@ -87,6 +100,27 @@
                 <div>C#</div>
                 <a href="#" style="pointer-events:none;opacity:0.6;">Accédez à C# (Indisponible)</a>
             </li>
+
+            <li class="card card-ruby">
+                <div>Ruby</div>
+                <a href="#" style="pointer-events:none;opacity:0.6;">Accédez à Ruby (Indisponible)</a>
+            </li>
+            <li class="card card-go">
+                <div>Go</div>
+                <a href="#" style="pointer-events:none;opacity:0.6;">Accédez à Go (Indisponible)</a>
+            </li>
+            <li class="card card-swift">
+                <div>Swift</div>
+                <a href="#" style="pointer-events:none;opacity:0.6;">Accédez à Swift (Indisponible)</a>
+            </li>
+            <li class="card card-kotlin">
+                <div>Kotlin</div>
+                <a href="#" style="pointer-events:none;opacity:0.6;">Accédez à Kotlin (Indisponible)</a>
+            </li>
+            <li class="card card-rust">
+                <div>Rust</div>
+                <a href="#" style="pointer-events:none;opacity:0.6;">Accédez à Rust (Indisponible)</a>
+            </li>
         </ul>
         </section>
         <section>
@@ -94,7 +128,7 @@
             <ul class="cards">
                 <li class="card card-react">
                     <div>React</div>
-                    <a href="#" style="pointer-events:none;opacity:0.6;">Accédez à React (Indisponible)</a>
+                    <a href="framework/React/index.html">Accédez à React</a>
                 </li>
                 <li class="card card-vue">
                     <div>Vue.js</div>
@@ -108,6 +142,22 @@
                     <div>Django</div>
                     <a href="#" style="pointer-events:none;opacity:0.6;">Accédez à Django (Indisponible)</a>
                 </li>
+                <!-- Dans index.html, ajout dans la section des frameworks -->
+                <li class="card card-angular">
+                    <div>Angular</div>
+                    <a href="#" style="pointer-events:none;opacity:0.6;">Accédez à Angular (Indisponible)</a>
+                </li>
+                <li class="card card-svelte">
+                    <div>Svelte</div>
+                    <a href="#" style="pointer-events:none;opacity:0.6;">Accédez à Svelte (Indisponible)</a>
+                </li>
+                <li class="card card-flask">
+                    <div>Flask</div>
+                    <a href="#" style="pointer-events:none;opacity:0.6;">Accédez à Flask (Indisponible)</a>
+                </li>
+
+                <!-- Dans index.html, ajout dans la section des langages -->
+
             </ul>
         </section>
         <section>
