--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
     </header>
     <main>
         <section class="nouveautes">
-            <h3 class="nouveautes__titre">Les nouveautés du 19 mai 2025</h3>
+            <h3 class="nouveautes__titre">Les nouveautés de mai</h3>
             <ul class="nouveautes__liste">
                 <li class="nouveautes__item">
                     <strong>Nouvelle implémentation</strong> : Nous avons essayé de mettre des chapitres de travaux
                     pratiques avec des explications, etc.
+                </li>
+                <li class="nouveautes__item">
+                    <strong>Nouvelle implémentation</strong> : Nous avons essayé de mettre des chapitres d'exercice qui
+                    sont en <strong>développement</strong>.
                 </li>
                 <li class="nouveautes__item">
                     <strong>Nouveaux chapitres de <a href="language/PHP/index.html"
@@ -41,14 +45,26 @@
                 </li>
 
                 <li class="nouveautes__item">
-                    <strong>🎉 Nouveau language : <a href="language/Python/index.html"
-                            class="nouveautes__lien">Python</a></strong><br>
+                    
                     <strong>Nouveaux chapitres de <a href="language/Python/index.html"
                             class="nouveautes__lien">Python</a></strong> :
                     <ul class="nouveautes__sous-liste">
                         <li class="nouveautes__sous-item">
-                            Chapitre 1 : <a href="language/Python/chapitres/installation.html"
+                            Chapitre 1 : <a href="language/Python/chapitres/introduction.html"
+                                class="nouveautes__lien">Introduction</a>
+                        </li>
+                        <li class="nouveautes__sous-item">
+                            Chapitre 2 : <a href="language/Python/chapitres/installation.html"
                                 class="nouveautes__lien">Installation</a>
+                        </li>
+                                                <li class="nouveautes__sous-item">
+                            Chapitre 3 : <a href="language/Python/chapitres/variables.html"
+                                class="nouveautes__lien">Variables et types de données</a>
+                        </li>
+                                                </li>
+                                                <li class="nouveautes__sous-item">
+                            Chapitre 4 : <a href="language/Python/chapitres/chaines_caracteres.html"
+                                class="nouveautes__lien">Les chaînes de caractèress</a>
                         </li>
 
                     </ul>
