--- a/language/Python/index.html
+++ b/language/Python/index.html
@@ -28,22 +28,22 @@
             <div class="chapter-card">
                 <h3>Chapitre 1: Introduction à Python</h3>
                 <p>Présentation du langage Python, son histoire et ses usages principaux.</p>
-                <a href="chapitres/installation.html" class="btn">Accéder au chapitre</a>
+                <a href="chapitres/introduction.html" class="btn">Accéder au chapitre</a>
             </div>
             <div class="chapter-card">
                 <h3>Chapitre 2: Installation de Python et premiers pas</h3>
                 <p>Installer Python sur votre ordinateur et écrire votre premier script.</p>
-                <a href="#" class="btn">Accéder au chapitre</a>
+                <a href="chapitres/installation.html" class="btn">Accéder au chapitre</a>
             </div>
             <div class="chapter-card">
                 <h3>Chapitre 3: Variables et types de données</h3>
                 <p>Comprendre les variables, les types de données de base et leur manipulation.</p>
-                <a href="#" class="btn">Accéder au chapitre</a>
+                <a href="chapitres/variables.html" class="btn">Accéder au chapitre</a>
             </div>
             <div class="chapter-card">
                 <h3>Chapitre 4: Les chaînes de caractères</h3>
                 <p>Manipuler et utiliser les chaînes de caractères en Python.</p>
-                <a href="#" class="btn">Accéder au chapitre</a>
+                <a href="chapitres/chaines_caracteres.html" class="btn">Accéder au chapitre</a>
             </div>
             <div class="chapter-card">
                 <h3>Chapitre 5: Les nombres : entiers et flottants</h3>
@@ -327,6 +327,13 @@
                 <p>Conseils pour continuer à progresser et s'améliorer en Python.</p>
                 <a href="#" class="btn">Accéder au chapitre</a>
             </div>
+            <div class="chapter-card EX">
+                <h5>Exercices</h5>
+                <h3>Exercice : Les chaînes de caractères</h3>
+                <p>Exerce-toi à manipuler et utiliser les chaînes de caractères en Python.</p>
+                <a href="exercices/chaines_caracteres.html" class="btn">Faire l'exercice</a>
+            </div>
+
         </section>
 
         <section>
