--- a/framework/React/index.html
+++ b/framework/React/index.html
@@ -144,8 +144,8 @@
     </main>
 
     <footer>
-        <p>Guide d'apprentissage React &copy; 2025 | Pour toute question, consultez la <a
-                href="https://fr.reactjs.org/docs/getting-started.html">documentation officielle</a></p>
+        <p>Guide d'apprentissage React &copy; 2025 | Pour en savoir plus, consultez la <a
+                href="https://fr.reactjs.org">documentation officielle React</a></p>
     </footer>
 </body>
 
