--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </li>
 
                 <li class="nouveautes__item">
-                    
+
                     <strong>Nouveaux chapitres de <a href="language/Python/index.html"
                             class="nouveautes__lien">Python</a></strong> :
                     <ul class="nouveautes__sous-liste">
@@ -57,31 +57,45 @@
                             Chapitre 2 : <a href="language/Python/chapitres/installation.html"
                                 class="nouveautes__lien">Installation</a>
                         </li>
-                                                <li class="nouveautes__sous-item">
+                        <li class="nouveautes__sous-item">
                             Chapitre 3 : <a href="language/Python/chapitres/variables.html"
                                 class="nouveautes__lien">Variables et types de données</a>
                         </li>
-                                                </li>
-                                                <li class="nouveautes__sous-item">
-                            Chapitre 4 : <a href="language/Python/chapitres/chaines_caracteres.html"
-                                class="nouveautes__lien">Les chaînes de caractèress</a>
-                        </li>
-
-                    </ul>
                 </li>
-                <li class="nouveautes__item">
-                    <strong>🎉 Nouveau framework : <a href="framework/React/index.html"
-                            class="nouveautes__lien">React</a></strong><br>
-                    <strong>Nouveaux chapitres de <a href="framework/React/index.html"
-                            class="nouveautes__lien">React</a></strong> :
-                    <ul class="nouveautes__sous-liste">
-                        <li class="nouveautes__sous-item">
-                            Chapitre 1 : <a href="framework/React/chapitres/introduction.html"
-                                class="nouveautes__lien">Introduction</a>
-                        </li>
-
-                    </ul>
+                <li class="nouveautes__sous-item">
+                    Chapitre 4 : <a href="language/Python/chapitres/chaines_caracteres.html"
+                        class="nouveautes__lien">Les chaînes de caractères</a>
                 </li>
+
+            </ul>
+            </li>
+            <li class="nouveautes__item">
+                
+                <strong>Nouveaux chapitres de <a href="framework/React/index.html"
+                        class="nouveautes__lien">React</a></strong> :
+                <ul class="nouveautes__sous-liste">
+                    <li class="nouveautes__sous-item">
+                        Chapitre 1 : <a href="framework/React/chapitres/introduction.html"
+                            class="nouveautes__lien">Introduction à React</a>
+                    </li>
+                    <li class="nouveautes__sous-item">
+                        Chapitre 2 : <a href="framework/React/chapitres/environnement.html"
+                            class="nouveautes__lien">Configuration de l'environnement
+                        </a>
+                    </li>
+                    <li class="nouveautes__sous-item">
+                        Chapitre 3 : <a href="framework/React/chapitres/jsx-composants.html"
+                            class="nouveautes__lien">JSX et les composants
+                        </a>
+                    </li>
+                                        <li class="nouveautes__sous-item">
+                        Chapitre 4 : <a href="framework/React/chapitres/props-state.html"
+                            class="nouveautes__lien">Props et état
+                        </a>
+                    </li>
+
+                </ul>
+            </li>
             </ul>
         </section>
 
