--- a/index.html
+++ b/index.html
@@ -70,31 +70,77 @@
             </ul>
             </li>
             <li class="nouveautes__item">
-                
+
                 <strong>Nouveaux chapitres de <a href="framework/React/index.html"
                         class="nouveautes__lien">React</a></strong> :
                 <ul class="nouveautes__sous-liste">
                     <li class="nouveautes__sous-item">
-                        Chapitre 1 : <a href="framework/React/chapitres/introduction.html"
-                            class="nouveautes__lien">Introduction à React</a>
+                        Chapitre 1 : <a href="chapitres/introduction.html" class="nouveautes__lien">Introduction à
+                            React</a>
                     </li>
                     <li class="nouveautes__sous-item">
-                        Chapitre 2 : <a href="framework/React/chapitres/environnement.html"
-                            class="nouveautes__lien">Configuration de l'environnement
-                        </a>
+                        Chapitre 2 : <a href="chapitres/environnement.html" class="nouveautes__lien">Configuration de
+                            l'environnement</a>
                     </li>
                     <li class="nouveautes__sous-item">
-                        Chapitre 3 : <a href="framework/React/chapitres/jsx-composants.html"
-                            class="nouveautes__lien">JSX et les composants
-                        </a>
+                        Chapitre 3 : <a href="chapitres/jsx-composants.html" class="nouveautes__lien">JSX et les
+                            composants</a>
                     </li>
-                                        <li class="nouveautes__sous-item">
-                        Chapitre 4 : <a href="framework/React/chapitres/props-state.html"
-                            class="nouveautes__lien">Props et état
-                        </a>
+                    <li class="nouveautes__sous-item">
+                        Chapitre 4 : <a href="chapitres/props-state.html" class="nouveautes__lien">Props et état</a>
                     </li>
-
+                    <li class="nouveautes__sous-item">
+                        Chapitre 5 : <a href="chapitres/cycle-vie.html" class="nouveautes__lien">Cycle de vie des
+                            composants</a>
+                    </li>
+                    <li class="nouveautes__sous-item">
+                        Chapitre 6 : <a href="chapitres/evenements.html" class="nouveautes__lien">Gestion des
+                            événements</a>
+                    </li>
+                    <li class="nouveautes__sous-item">
+                        Chapitre 7 : <a href="chapitres/hooks.html" class="nouveautes__lien">Les Hooks</a>
+                    </li>
+                    <li class="nouveautes__sous-item">
+                        Chapitre 8 : <a href="chapitres/formulaires.html" class="nouveautes__lien">Formulaire en
+                            React</a>
+                    </li>
+                    <li class="nouveautes__sous-item">
+                        Chapitre 9 : <a href="chapitres/routage.html" class="nouveautes__lien">Routage avec React
+                            Router</a>
+                    </li>
+                    <li class="nouveautes__sous-item">
+                        Chapitre 10 : <a href="chapitres/etat-avance.html" class="nouveautes__lien">Gestion d'état
+                            avancée (Context API, Redux)</a>
+                    </li>
+                    <li class="nouveautes__sous-item">
+                        Chapitre 11 : <a href="chapitres/http.html" class="nouveautes__lien">Requêtes HTTP avec
+                            Axios</a>
+                    </li>
+                    <li class="nouveautes__sous-item">
+                        Chapitre 12 : <a href="chapitres/tests.html" class="nouveautes__lien">Tests avec Jest et Testing
+                            Library</a>
+                    </li>
+                    <li class="nouveautes__sous-item">
+                        Chapitre 13 : <a href="chapitres/performance.html" class="nouveautes__lien">Performance et
+                            optimisation</a>
+                    </li>
+                    <li class="nouveautes__sous-item">
+                        Chapitre 14 : <a href="chapitres/deploiement.html" class="nouveautes__lien">Déploiement d'une
+                            application React</a>
+                    </li>
+                    <li class="nouveautes__sous-item">
+                        Chapitre 15 : <a href="chapitres/todo-app.html" class="nouveautes__lien">Création d'une
+                            application de tâches</a>
+                    </li>
+                    <li class="nouveautes__sous-item">
+                        Chapitre 16 : <a href="chapitres/app-meteo.html" class="nouveautes__lien">Application météo</a>
+                    </li>
+                    <li class="nouveautes__sous-item">
+                        Chapitre 17 : <a href="chapitres/ecommerce.html" class="nouveautes__lien">E-commerce
+                            (panier)</a>
+                    </li>
                 </ul>
+
             </li>
             </ul>
         </section>
