php_update_delete

--- a/index.html
+++ b/index.html
@@ -26,23 +26,11 @@
                     sont en <strong>développement</strong>.
                 </li>
                 <li class="nouveautes__item">
-                    <strong>Nouveaux chapitres de <a href="language/PHP/index.html"
-                            class="nouveautes__lien">PHP</a></strong> :
-                    <ul class="nouveautes__sous-liste">
-                        <li class="nouveautes__sous-item">
-                            Chapitre 15 : <a href="language/PHP/chapitres/session.html"
-                                class="nouveautes__lien">Sessions</a>
-                        </li>
-                        <li class="nouveautes__sous-item">
-                            Chapitre 16 : <a href="language/PHP/chapitres/compteur.html"
-                                class="nouveautes__lien">Compteur ( TP ) </a>
-                        </li>
-                        <li class="nouveautes__sous-item">
-                            Chapitre 17 : <a href="language/PHP/chapitres/dashboard.html"
-                                class="nouveautes__lien">Tableau de bord ( TP )</a>
-                        </li>
-                    </ul>
+                    <strong>Nouvelle implémentation</strong> : La refonte du module PHP est en cours, cette
+                    fonctionnalité est donc temporairement indisponible.
                 </li>
+
+
 
                 <li class="nouveautes__item">
 
@@ -75,68 +63,85 @@
                         class="nouveautes__lien">React</a></strong> :
                 <ul class="nouveautes__sous-liste">
                     <li class="nouveautes__sous-item">
-                        Chapitre 1 : <a href="chapitres/introduction.html" class="nouveautes__lien">Introduction à
+                        Chapitre 1 : <a href="framework/React/chapitres/introduction.html"
+                            class="nouveautes__lien">Introduction à
                             React</a>
                     </li>
                     <li class="nouveautes__sous-item">
-                        Chapitre 2 : <a href="chapitres/environnement.html" class="nouveautes__lien">Configuration de
+                        Chapitre 2 : <a href="framework/React/chapitres/environnement.html"
+                            class="nouveautes__lien">Configuration de
                             l'environnement</a>
                     </li>
                     <li class="nouveautes__sous-item">
-                        Chapitre 3 : <a href="chapitres/jsx-composants.html" class="nouveautes__lien">JSX et les
+                        Chapitre 3 : <a href="framework/React/chapitres/jsx-composants.html"
+                            class="nouveautes__lien">JSX et les
                             composants</a>
                     </li>
                     <li class="nouveautes__sous-item">
-                        Chapitre 4 : <a href="chapitres/props-state.html" class="nouveautes__lien">Props et état</a>
+                        Chapitre 4 : <a href="framework/React/chapitres/props-state.html" class="nouveautes__lien">Props
+                            et état</a>
                     </li>
                     <li class="nouveautes__sous-item">
-                        Chapitre 5 : <a href="chapitres/cycle-vie.html" class="nouveautes__lien">Cycle de vie des
+                        Chapitre 5 : <a href="framework/React/chapitres/cycle-vie.html" class="nouveautes__lien">Cycle
+                            de vie des
                             composants</a>
                     </li>
                     <li class="nouveautes__sous-item">
-                        Chapitre 6 : <a href="chapitres/evenements.html" class="nouveautes__lien">Gestion des
+                        Chapitre 6 : <a href="framework/React/chapitres/evenements.html"
+                            class="nouveautes__lien">Gestion des
                             événements</a>
                     </li>
                     <li class="nouveautes__sous-item">
-                        Chapitre 7 : <a href="chapitres/hooks.html" class="nouveautes__lien">Les Hooks</a>
+                        Chapitre 7 : <a href="framework/React/chapitres/hooks.html" class="nouveautes__lien">Les
+                            Hooks</a>
                     </li>
                     <li class="nouveautes__sous-item">
-                        Chapitre 8 : <a href="chapitres/formulaires.html" class="nouveautes__lien">Formulaire en
+                        Chapitre 8 : <a href="framework/React/chapitres/formulaires.html"
+                            class="nouveautes__lien">Formulaire en
                             React</a>
                     </li>
                     <li class="nouveautes__sous-item">
-                        Chapitre 9 : <a href="chapitres/routage.html" class="nouveautes__lien">Routage avec React
+                        Chapitre 9 : <a href="framework/React/chapitres/routage.html" class="nouveautes__lien">Routage
+                            avec React
                             Router</a>
                     </li>
                     <li class="nouveautes__sous-item">
-                        Chapitre 10 : <a href="chapitres/etat-avance.html" class="nouveautes__lien">Gestion d'état
+                        Chapitre 10 : <a href="framework/React/chapitres/etat-avance.html"
+                            class="nouveautes__lien">Gestion d'état
                             avancée (Context API, Redux)</a>
                     </li>
                     <li class="nouveautes__sous-item">
-                        Chapitre 11 : <a href="chapitres/http.html" class="nouveautes__lien">Requêtes HTTP avec
+                        Chapitre 11 : <a href="framework/React/chapitres/http.html" class="nouveautes__lien">Requêtes
+                            HTTP avec
                             Axios</a>
                     </li>
                     <li class="nouveautes__sous-item">
-                        Chapitre 12 : <a href="chapitres/tests.html" class="nouveautes__lien">Tests avec Jest et Testing
+                        Chapitre 12 : <a href="framework/React/chapitres/tests.html" class="nouveautes__lien">Tests avec
+                            Jest et Testing
                             Library</a>
                     </li>
                     <li class="nouveautes__sous-item">
-                        Chapitre 13 : <a href="chapitres/performance.html" class="nouveautes__lien">Performance et
+                        Chapitre 13 : <a href="framework/React/chapitres/performance.html"
+                            class="nouveautes__lien">Performance et
                             optimisation</a>
                     </li>
                     <li class="nouveautes__sous-item">
-                        Chapitre 14 : <a href="chapitres/deploiement.html" class="nouveautes__lien">Déploiement d'une
+                        Chapitre 14 : <a href="framework/React/chapitres/deploiement.html"
+                            class="nouveautes__lien">Déploiement d'une
                             application React</a>
                     </li>
                     <li class="nouveautes__sous-item">
-                        Chapitre 15 : <a href="chapitres/todo-app.html" class="nouveautes__lien">Création d'une
+                        Chapitre 15 : <a href="framework/React/chapitres/todo-app.html"
+                            class="nouveautes__lien">Création d'une
                             application de tâches</a>
                     </li>
                     <li class="nouveautes__sous-item">
-                        Chapitre 16 : <a href="chapitres/app-meteo.html" class="nouveautes__lien">Application météo</a>
+                        Chapitre 16 : <a href="framework/React/chapitres/app-meteo.html"
+                            class="nouveautes__lien">Application météo</a>
                     </li>
                     <li class="nouveautes__sous-item">
-                        Chapitre 17 : <a href="chapitres/ecommerce.html" class="nouveautes__lien">E-commerce
+                        Chapitre 17 : <a href="framework/React/chapitres/ecommerce.html"
+                            class="nouveautes__lien">E-commerce
                             (panier)</a>
                     </li>
                 </ul>
@@ -147,6 +152,10 @@
 
         <h2>Choisissez un langage pour commencer</h2>
         <ul class="cards">
+            <li class="card card-python">
+                <div>Python</div>
+                <a href="language/Python/index.html">Accédez à Python</a>
+            </li>
             <li class="card card-html">
                 <div>HTML</div>
                 <a href="#" style="pointer-events:none;opacity:0.6;">Accédez à HTML (Indisponible)</a>
@@ -157,17 +166,15 @@
             </li>
             <li class="card card-php">
                 <div>PHP</div>
-                <a href="language/PHP/index.html">Accédez à PHP</a>
+                <a href="language/PHP/index.html" style="pointer-events:none;opacity:0.6;">Accédez à PHP ( Indisponible
+                    )</a>
             </li>
             <li class="card card-js">
                 <div>JavaScript</div>
                 <a href="language/JavaScript/" style="pointer-events:none;opacity:0.6;">Accédez à JavaScript
                     (Indisponible)</a>
             </li>
-            <li class="card card-python">
-                <div>Python</div>
-                <a href="language/Python/index.html">Accédez à Python</a>
-            </li>
+
             <li class="card card-java">
                 <div>Java</div>
                 <a href="#" style="pointer-events:none;opacity:0.6;">Accédez à Java (Indisponible)</a>
