--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </li>
                 <li class="nouveautes__item">
                     <strong>Nouvelle implémentation</strong> : La refonte du module PHP est en cours, cette
-                    fonctionnalité est donc temporairement indisponible.
+                    fonctionnalité est donc temporairement indisponible. ( 16 chapitres sur 100 )
                 </li>
 
 
@@ -156,6 +156,11 @@
                 <div>Python</div>
                 <a href="language/Python/index.html">Accédez à Python</a>
             </li>
+                        <li class="card card-php">
+                <div>PHP</div>
+                <a href="language/PHP/index.html">Accédez à PHP 
+                    </a>
+            </li>
             <li class="card card-html">
                 <div>HTML</div>
                 <a href="#" style="pointer-events:none;opacity:0.6;">Accédez à HTML (Indisponible)</a>
@@ -164,11 +169,7 @@
                 <div>CSS</div>
                 <a href="#" style="pointer-events:none;opacity:0.6;">Accédez à CSS (Indisponible)</a>
             </li>
-            <li class="card card-php">
-                <div>PHP</div>
-                <a href="language/PHP/index.html" style="pointer-events:none;opacity:0.6;">Accédez à PHP ( Indisponible
-                    )</a>
-            </li>
+
             <li class="card card-js">
                 <div>JavaScript</div>
                 <a href="language/JavaScript/" style="pointer-events:none;opacity:0.6;">Accédez à JavaScript
