--- a/language/PHP/index.html
+++ b/language/PHP/index.html
@@ -23,6 +23,13 @@
             </p>
         </section>
 
+        <div class="progress-wrapper">
+        <div class="progress-container">
+            <div class="progress-bar" id="progressBar">16%</div>
+        </div>
+        <div class="progress-text">Progression: 16/100</div>
+    </div>
+
         <section class="chapters">
             <!-- Bases de PHP -->
             <div class="chapter-card">
@@ -674,6 +681,16 @@
     <footer>
         <p>Guide d'apprentissage PHP &copy; 2025 | 100 chapitres complets</p>
     </footer>
+        <script>
+        // Vous pouvez mettre à jour la progression dynamiquement avec JavaScript
+        // Exemple:
+        // function updateProgress(newValue) {
+        //     const progressBar = document.getElementById('progressBar');
+        //     progressBar.style.width = newValue + '%';
+        //     progressBar.textContent = newValue + '%';
+        //     document.querySelector('.progress-text').textContent = `Progression: ${newValue}/100`;
+        // }
+    </script>
 </body>
 
 </html>
