--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
                     sont en <strong>développement</strong>.
                 </li>
                 <li class="nouveautes__item">
-                    <strong>Nouvelle implémentation</strong> : La refonte du module PHP est en cours, cette
-                    fonctionnalité est donc temporairement indisponible. ( 40 chapitres sur 100 )
+                    <strong>Nouvelle implémentation</strong> : La refonte du module PHP est en cours. ( 40 chapitres sur 100 )
                 </li>
 
 
