--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>DevUp - Apprendre à coder</title>
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/styles.css">   
 
 </head>
 
@@ -26,7 +26,7 @@
                     sont en <strong>développement</strong>.
                 </li>
                 <li class="nouveautes__item">
-                    <strong>Nouvelle implémentation</strong> : La refonte du module PHP est en cours. ( 52 chapitres sur 100 )
+                    <strong>Nouvelle implémentation</strong> : La refonte du module PHP est en cours. ( 80 chapitres sur 100 )
                 </li>
 
 
