--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>DevUp - Apprendre à coder</title>
-    <link rel="stylesheet" href="assets/styles.css">   
+    <link rel="stylesheet" href="assets/styles.css">
 
 </head>
 
@@ -17,17 +17,7 @@
         <section class="nouveautes">
             <h3 class="nouveautes__titre">Les nouveautés de mai</h3>
             <ul class="nouveautes__liste">
-                <li class="nouveautes__item">
-                    <strong>Nouvelle implémentation</strong> : Nous avons essayé de mettre des chapitres de travaux
-                    pratiques avec des explications, etc.
-                </li>
-                <li class="nouveautes__item">
-                    <strong>Nouvelle implémentation</strong> : Nous avons essayé de mettre des chapitres d'exercice qui
-                    sont en <strong>développement</strong>.
-                </li>
-                <li class="nouveautes__item">
-                    <strong>Nouvelle implémentation</strong> : La refonte du module PHP est en cours. ( 80 chapitres sur 100 )
-                </li>
+
 
 
 
@@ -56,96 +46,7 @@
 
             </ul>
             </li>
-            <li class="nouveautes__item">
 
-                <strong>Nouveaux chapitres de <a href="framework/React/index.html"
-                        class="nouveautes__lien">React</a></strong> :
-                <ul class="nouveautes__sous-liste">
-                    <li class="nouveautes__sous-item">
-                        Chapitre 1 : <a href="framework/React/chapitres/introduction.html"
-                            class="nouveautes__lien">Introduction à
-                            React</a>
-                    </li>
-                    <li class="nouveautes__sous-item">
-                        Chapitre 2 : <a href="framework/React/chapitres/environnement.html"
-                            class="nouveautes__lien">Configuration de
-                            l'environnement</a>
-                    </li>
-                    <li class="nouveautes__sous-item">
-                        Chapitre 3 : <a href="framework/React/chapitres/jsx-composants.html"
-                            class="nouveautes__lien">JSX et les
-                            composants</a>
-                    </li>
-                    <li class="nouveautes__sous-item">
-                        Chapitre 4 : <a href="framework/React/chapitres/props-state.html" class="nouveautes__lien">Props
-                            et état</a>
-                    </li>
-                    <li class="nouveautes__sous-item">
-                        Chapitre 5 : <a href="framework/React/chapitres/cycle-vie.html" class="nouveautes__lien">Cycle
-                            de vie des
-                            composants</a>
-                    </li>
-                    <li class="nouveautes__sous-item">
-                        Chapitre 6 : <a href="framework/React/chapitres/evenements.html"
-                            class="nouveautes__lien">Gestion des
-                            événements</a>
-                    </li>
-                    <li class="nouveautes__sous-item">
-                        Chapitre 7 : <a href="framework/React/chapitres/hooks.html" class="nouveautes__lien">Les
-                            Hooks</a>
-                    </li>
-                    <li class="nouveautes__sous-item">
-                        Chapitre 8 : <a href="framework/React/chapitres/formulaires.html"
-                            class="nouveautes__lien">Formulaire en
-                            React</a>
-                    </li>
-                    <li class="nouveautes__sous-item">
-                        Chapitre 9 : <a href="framework/React/chapitres/routage.html" class="nouveautes__lien">Routage
-                            avec React
-                            Router</a>
-                    </li>
-                    <li class="nouveautes__sous-item">
-                        Chapitre 10 : <a href="framework/React/chapitres/etat-avance.html"
-                            class="nouveautes__lien">Gestion d'état
-                            avancée (Context API, Redux)</a>
-                    </li>
-                    <li class="nouveautes__sous-item">
-                        Chapitre 11 : <a href="framework/React/chapitres/http.html" class="nouveautes__lien">Requêtes
-                            HTTP avec
-                            Axios</a>
-                    </li>
-                    <li class="nouveautes__sous-item">
-                        Chapitre 12 : <a href="framework/React/chapitres/tests.html" class="nouveautes__lien">Tests avec
-                            Jest et Testing
-                            Library</a>
-                    </li>
-                    <li class="nouveautes__sous-item">
-                        Chapitre 13 : <a href="framework/React/chapitres/performance.html"
-                            class="nouveautes__lien">Performance et
-                            optimisation</a>
-                    </li>
-                    <li class="nouveautes__sous-item">
-                        Chapitre 14 : <a href="framework/React/chapitres/deploiement.html"
-                            class="nouveautes__lien">Déploiement d'une
-                            application React</a>
-                    </li>
-                    <li class="nouveautes__sous-item">
-                        Chapitre 15 : <a href="framework/React/chapitres/todo-app.html"
-                            class="nouveautes__lien">Création d'une
-                            application de tâches</a>
-                    </li>
-                    <li class="nouveautes__sous-item">
-                        Chapitre 16 : <a href="framework/React/chapitres/app-meteo.html"
-                            class="nouveautes__lien">Application météo</a>
-                    </li>
-                    <li class="nouveautes__sous-item">
-                        Chapitre 17 : <a href="framework/React/chapitres/ecommerce.html"
-                            class="nouveautes__lien">E-commerce
-                            (panier)</a>
-                    </li>
-                </ul>
-
-            </li>
             </ul>
         </section>
 
@@ -155,10 +56,11 @@
                 <div>Python</div>
                 <a href="language/Python/index.html">Accédez à Python</a>
             </li>
-                        <li class="card card-php">
+            <li class="card card-php">
                 <div>PHP</div>
-                <a href="language/PHP/index.html">Accédez à PHP 
-                    </a>
+                <a href="language/PHP/index.html">Accédez à PHP
+                </a>
+                
             </li>
             <li class="card card-html">
                 <div>HTML</div>
@@ -211,7 +113,8 @@
             <ul class="cards">
                 <li class="card card-react">
                     <div>React</div>
-                    <a href="framework/React/index.html">Accédez à React</a>
+                    <a href="framework/React/index.html" style="pointer-events:none;opacity:0.6;">Accédez à React
+                        (Indisponible)</a>
                 </li>
                 <li class="card card-vue">
                     <div>Vue.js</div>
