--- a/framework/React/index.html
+++ b/framework/React/index.html
@@ -68,66 +68,98 @@
             </div>
 
             <div class="chapter-card">
-                <h3>Chapitre 8: Formulaire en React</h3>
-                <p>Maîtrisez la création et la gestion des formulaires avec React.</p>
-                <a href="chapitres/formulaires.html" class="btn">Accéder au chapitre</a>
+                <h3>Chapitre 8: Les Hooks Avancés</h3>
+                <p>Explorez les hooks personnalisés, useCallback, useMemo, useRef et useReducer.</p>
+                <a href="chapitres/hooks-avances.html" class="btn">Accéder au chapitre</a>
             </div>
 
             <div class="chapter-card">
-                <h3>Chapitre 9: Routage avec React Router</h3>
-                <p>Apprenez à implémenter la navigation entre pages avec React Router.</p>
-                <a href="chapitres/routage.html" class="btn">Accéder au chapitre</a>
+                <h3>Chapitre 9: Context API en profondeur</h3>
+                <p>Maîtrisez la gestion d'état globale avec Context et ses cas d'utilisation.</p>
+                <a href="chapitres/context-api.html" class="btn">Accéder au chapitre</a>
             </div>
 
             <div class="chapter-card">
-                <h3>Chapitre 10: Gestion d'état avancée (Context API, Redux)</h3>
-                <p>Découvrez comment gérer l'état global de votre application.</p>
-                <a href="chapitres/etat-avance.html" class="btn">Accéder au chapitre</a>
+                <h3>Chapitre 10: Redux Toolkit</h3>
+                <p>Découvrez la nouvelle approche de Redux avec Redux Toolkit et RTK Query.</p>
+                <a href="chapitres/redux-toolkit.html" class="btn">Accéder au chapitre</a>
             </div>
 
             <div class="chapter-card">
-                <h3>Chapitre 11: Requêtes HTTP avec Axios</h3>
-                <p>Apprenez à effectuer des requêtes API dans vos applications React.</p>
-                <a href="chapitres/http.html" class="btn">Accéder au chapitre</a>
+                <h3>Chapitre 11: Styled Components</h3>
+                <p>Apprenez à utiliser les CSS-in-JS avec Styled Components et Emotion.</p>
+                <a href="chapitres/styled-components.html" class="btn">Accéder au chapitre</a>
             </div>
 
             <div class="chapter-card">
-                <h3>Chapitre 12: Tests avec Jest et Testing Library</h3>
-                <p>Maîtrisez les tests unitaires et d'intégration pour vos composants React.</p>
-                <a href="chapitres/tests.html" class="btn">Accéder au chapitre</a>
+                <h3>Chapitre 12: React Query</h3>
+                <p>Gérez vos données serveur efficacement avec React Query et son cache intelligent.</p>
+                <a href="chapitres/react-query.html" class="btn">Accéder au chapitre</a>
             </div>
 
             <div class="chapter-card">
-                <h3>Chapitre 13: Performance et optimisation</h3>
-                <p>Découvrez les techniques pour optimiser les performances de vos applications React.</p>
-                <a href="chapitres/performance.html" class="btn">Accéder au chapitre</a>
+                <h3>Chapitre 13: TypeScript avec React</h3>
+                <p>Intégrez TypeScript dans vos projets React pour un code plus robuste.</p>
+                <a href="chapitres/typescript-react.html" class="btn">Accéder au chapitre</a>
             </div>
 
             <div class="chapter-card">
-                <h3>Chapitre 14: Déploiement d'une application React</h3>
-                <p>Apprenez à déployer votre application sur Netlify, Vercel ou d'autres plateformes.</p>
-                <a href="chapitres/deploiement.html" class="btn">Accéder au chapitre</a>
+                <h3>Chapitre 14: Next.js Fondamentaux</h3>
+                <p>Découvrez le framework Next.js pour créer des applications React optimisées.</p>
+                <a href="chapitres/nextjs-fondamentaux.html" class="btn">Accéder au chapitre</a>
+            </div>
+
+            <div class="chapter-card">
+                <h3>Chapitre 15: Animations React</h3>
+                <p>Maîtrisez les animations avec React Spring et Framer Motion.</p>
+                <a href="chapitres/animations-react.html" class="btn">Accéder au chapitre</a>
+            </div>
+
+            <div class="chapter-card">
+                <h3>Chapitre 16: Tests Avancés</h3>
+                <p>Approfondissez les tests avec React Testing Library et Cypress.</p>
+                <a href="chapitres/tests-avances.html" class="btn">Accéder au chapitre</a>
+            </div>
+
+            <div class="chapter-card">
+                <h3>Chapitre 17: Sécurité React</h3>
+                <p>Implémentez l'authentification et sécurisez vos applications React.</p>
+                <a href="chapitres/securite.html" class="btn">Accéder au chapitre</a>
             </div>
 
             <div class="chapter-card TP">
-                <h5>Travaux pratique</h5>
-                <h3>Chapitre 15: Création d'une application de tâches</h3>
-                <p>Construisez une application de gestion de tâches complète avec React.</p>
-                <a href="chapitres/todo-app.html" class="btn">Accéder au chapitre</a>
+                <h5>Travaux pratiques</h5>
+                <h3>Projet 1: Clone Instagram</h3>
+                <p>Créez un clone d'Instagram avec React, Firebase et Styled Components.</p>
+                <a href="chapitres/projet-instagram.html" class="btn">Accéder au projet</a>
             </div>
 
             <div class="chapter-card TP">
-                <h5>Travaux pratique</h5>
-                <h3>Chapitre 16: Application météo</h3>
-                <p>Développez une application météo qui consomme une API externe.</p>
-                <a href="chapitres/app-meteo.html" class="btn">Accéder au chapitre</a>
+                <h5>Travaux pratiques</h5>
+                <h3>Projet 2: Dashboard Analytics</h3>
+                <p>Développez un dashboard avec charts, filtres et données en temps réel.</p>
+                <a href="chapitres/projet-dashboard.html" class="btn">Accéder au projet</a>
             </div>
 
             <div class="chapter-card TP">
-                <h5>Travaux pratique</h5>
-                <h3>Chapitre 17: E-commerce (panier)</h3>
-                <p>Créez un mini site e-commerce avec gestion de panier et paiement simulé.</p>
-                <a href="chapitres/ecommerce.html" class="btn">Accéder au chapitre</a>
+                <h5>Travaux pratiques</h5>
+                <h3>Projet 3: Application Chat</h3>
+                <p>Construisez une application de chat en temps réel avec Socket.io et React.</p>
+                <a href="chapitres/projet-chat.html" class="btn">Accéder au projet</a>
+            </div>
+
+            <div class="chapter-card EX">
+                <h5>Expert</h5>
+                <h3>Module Expert: Architecture</h3>
+                <p>Patterns avancés, architecture scalable et meilleures pratiques.</p>
+                <a href="chapitres/expert-architecture.html" class="btn">Accéder au module</a>
+            </div>
+
+            <div class="chapter-card EX">
+                <h5>Expert</h5>
+                <h3>Module Expert: Performance</h3>
+                <p>Optimisation avancée, lazy loading, et stratégies de mise en cache.</p>
+                <a href="chapitres/expert-performance.html" class="btn">Accéder au module</a>
             </div>
         </section>
 
