--- a/index.html
+++ b/index.html
@@ -19,33 +19,19 @@
             <ul class="nouveautes__liste">
 
 
+                <li class="nouveautes__item">
 
+                    <strong>Nouveaux chapitres de <a href="language/PHP/index.html"
+                            class="nouveautes__lien">PHP</a></strong> :
+
+                </li>
 
                 <li class="nouveautes__item">
 
                     <strong>Nouveaux chapitres de <a href="language/Python/index.html"
                             class="nouveautes__lien">Python</a></strong> :
-                    <ul class="nouveautes__sous-liste">
-                        <li class="nouveautes__sous-item">
-                            Chapitre 1 : <a href="language/Python/chapitres/introduction.html"
-                                class="nouveautes__lien">Introduction</a>
-                        </li>
-                        <li class="nouveautes__sous-item">
-                            Chapitre 2 : <a href="language/Python/chapitres/installation.html"
-                                class="nouveautes__lien">Installation</a>
-                        </li>
-                        <li class="nouveautes__sous-item">
-                            Chapitre 3 : <a href="language/Python/chapitres/variables.html"
-                                class="nouveautes__lien">Variables et types de données</a>
-                        </li>
-                </li>
-                <li class="nouveautes__sous-item">
-                    Chapitre 4 : <a href="language/Python/chapitres/chaines_caracteres.html"
-                        class="nouveautes__lien">Les chaînes de caractères</a>
-                </li>
 
-            </ul>
-            </li>
+                </li>
 
             </ul>
         </section>
@@ -60,7 +46,7 @@
                 <div>PHP</div>
                 <a href="language/PHP/index.html">Accédez à PHP
                 </a>
-                
+
             </li>
             <li class="card card-html">
                 <div>HTML</div>
