--- a/language/Python/index.html
+++ b/language/Python/index.html
@@ -24,6 +24,13 @@
             </p>
         </section>
 
+                <div class="progress-wrapper">
+            <div class="progress-container">
+                <div class="progress-bar" id="progressBar">17,6%</div>
+            </div>
+
+        </div>
+
         <section class="chapters">
             <div class="chapter-card">
                 <h3>Chapitre 1: Introduction à Python</h3>
