--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>DevUp - Apprendre à coder</title>
     <link rel="stylesheet" href="assets/styles.css">
+    <link rel="icon" href="Sans titre-1.png" type="image/x-icon">
 
 </head>
 
@@ -15,7 +16,7 @@
     </header>
     <main>
         <section class="nouveautes">
-            <h3 class="nouveautes__titre">Les nouveautés de mai</h3>
+            <h3 class="nouveautes__titre">Les nouveautés de Juin</h3>
             <ul class="nouveautes__liste">
 
                 <li class="nouveautes__item">
@@ -56,11 +57,11 @@
         <ul class="cards">
             <li class="card card-python">
                 <div>Python </div>
-                <a href="#" style="pointer-events:none;opacity:0.6;">Accédez à Python</a>
+                <a href="#" style="pointer-events:none;opacity:0.6;">Accédez à Python (Indisponible)</a>
             </li>
             <li class="card card-php">
                 <div>PHP</div>
-                <a href="#" style="pointer-events:none;opacity:0.6;">Accédez à PHP
+                <a href="#" style="pointer-events:none;opacity:0.6;">Accédez à PHP (Indisponible)
                 </a>
 
             </li>
