--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <ul class="cards">
             <li class="card card-python">
                 <div>Python </div>
-                <a href="#" style="pointer-events:none;opacity:0.6;">Accédez à Python (Indisponible)</a>
+                <a href="language/Python/index.html">Accédez à Python</a>
             </li>
             <li class="card card-php">
                 <div>PHP</div>
